--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE>
+
+</html<!DOCTYPE>
 <html>
 <head><title>dylan cuddington</title>
 </head>
-<img src="19146011_10211060672647742_2885061097265403963_n" width="450" height "350"/>
+<body>
+  <img src="19146011_10211060672647742_2885061097265403963_n" width="450" height "350"/>
 <h1>Dylan Cuddington</h1
 <p>Even sense I was small I have always loved History. I love to read all kinds of books on the subject. As soon as I could read I was reading history books. I also enjoy Theology. I read any book about Theology that interests me that I can get my hands on. I also like Philosophy. I don't like it as much as the other two subjects, but it still interests me. I like books that were written a long time ago. 1700s to now does not interest me as much but for books on history it doesint matter. I'm always looking for new books to read and expand my Knowledge.</p>
 <a href=-"fn">"http://www.dylanspage.com">/a>
-
-
+</body>
+  </html>
